Even more cleaning

--- a/browning.css
+++ b/browning.css
@@ -1,23 +1,22 @@
 h3 {
-	margin: 0;
 	font: 400 1.2em/1.4 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Verdana, Arial, sans-serif;
+	margin: 0;
 }
 label,
 input,
 textarea { text-align: left; }
 input,
 textarea {
-	outline: none;
+	background: #eee;
 	border: none;
 	border-radius: 3px;
-	margin: 0;
-	width: 96%;
-	padding: 1% 2%;
-	font: 400 1.2em/1.4 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Verdana, Arial, sans-serif;
-	background: #eee;
 	color: #111;
+	font: 400 1.2em/1.4 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Verdana, Arial, sans-serif;
+	margin: 0;
+	padding: 1% 2%;
+	width: 96%;
 }
 textarea { resize: vertical; }
-input[type='reset'] { width: 100%; padding: 3% 6%; background: #777; color: #ddd; }
-input[type='submit'] { width: 100%; padding: 2% 4%; background: #2980b9; color: #fff; }
+input[type='reset'] { background: #777; color: #ddd; padding: 3% 6%; width: 100%; }
+input[type='submit'] { background: #2980b9; color: #fff; padding: 2% 4%; width: 100%; }
 #recaptcha_widget_div { float: right; }
