--- a/assets/css/browning.css
+++ b/assets/css/browning.css
@@ -1,21 +1,70 @@
-h3 {
-	font: 400 1.2em/1.4 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Verdana, Arial, sans-serif;
-	margin: 0;
+header,
+.section-guide,
+footer {
+	margin: 0 auto;
+	width: 100%;
 }
-label,
-input,
-textarea { text-align: left; }
+header { padding: 5rem; }
+footer { padding: 5rem 5rem 3rem; }
+.section-guide {
+	max-width: 80rem;
+}
+section {
+	display: inline-block;
+	max-width: 80rem;
+	padding: 0 5rem;
+	position: relative;
+	vertical-align: top;
+}
+
+code,
 input,
 textarea {
-	background: #eee;
 	border: none;
-	border-radius: 3px;
-	color: #111;
-	font: 400 1.2em/1.4 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Verdana, Arial, sans-serif;
+	display: block;
+	line-height: 2;
 	margin: 0;
-	padding: 1% 2%;
-	width: 96%;
+	outline: none;
+	padding: .7rem 1rem;
+	text-align: left;
+	white-space: pre-wrap;
 }
 textarea { resize: vertical; }
-input[type='reset'] { background: #777; color: #ddd; padding: 3% 6%; width: 100%; }
-input[type='submit'] { background: #2980b9; color: #fff; padding: 2% 4%; width: 100%; }
+
+a { color: inherit; text-decoration: none; }
+
+.button {
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),
+	            0 2px 10px 0 rgba(0,0,0,0.12);
+	margin: 2rem 0;
+	padding: .7rem 1rem;
+	transition: all 200ms ease-in-out;
+}
+.button:hover { opacity: 0.9; }
+.button:active { box-shadow: none; }
+.false-text-button {
+	margin: 2rem 0;
+	padding: .7rem;
+}
+
+.text-center { text-align: center; }
+.text-left { text-align: left; }
+.text-right { text-align: right; }
+
+.float-center { margin: 0 auto; }
+.float-left { float: left; }
+.float-right { float: right; }
+
+.display-none { display: none; }
+.display-block { display: block; }
+.display-inline { display: inline-block; }
+code.display-inline,
+input.display-inline,
+textarea.display-inline {
+	line-height: 1.4;
+	padding: .35rem .5rem;
+}
+
+.rounded { border-radius: 5px; }
+
+.min-width-10vw { min-width: 10vw; }
