--- a/assets/css/browning.css
+++ b/assets/css/browning.css
@@ -16,7 +16,6 @@ section {
 	position: relative;
 	vertical-align: top;
 }
-
 code,
 input,
 textarea {
@@ -25,17 +24,19 @@ textarea {
 	line-height: 2;
 	margin: 0;
 	outline: none;
-	padding: .7rem 1rem;
+	padding: 0.7rem 1rem;
 	text-align: left;
 	white-space: pre-wrap;
 }
 textarea { resize: vertical; }
-
-a { color: inherit; text-decoration: none; }
-
+a {
+	color: inherit;
+	text-decoration: none;
+}
 .button {
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),
-	            0 2px 10px 0 rgba(0,0,0,0.12);
+	box-shadow:
+		0 2px 5px 0 rgba(0,0,0,0.16),
+		0 2px 10px 0 rgba(0,0,0,0.12);
 	margin: 2rem 0;
 	padding: .7rem 1rem;
 	transition: all 200ms ease-in-out;
@@ -46,17 +47,14 @@ a { color: inherit; text-decoration: none; }
 	margin: 2rem 0;
 	padding: .7rem;
 }
-
 .text-center { text-align: center; }
 .text-left { text-align: left; }
 .text-right { text-align: right; }
 .text-bold { font-weight: bold; }
 .text-italic { font-style: italic; }
-
 .float-center { margin: 0 auto; }
 .float-left { float: left; }
 .float-right { float: right; }
-
 .display-none { display: none; }
 .display-block { display: block; }
 .display-inline { display: inline-block; }
@@ -66,12 +64,19 @@ textarea.display-inline {
 	line-height: 1.4;
 	padding: .35rem .5rem;
 }
-
 .rounded { border-radius: 5px; }
-
 .min-width-10vw { min-width: 10vw; }
-
-.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}
-.github-corner svg{fill:#fff; position: absolute; top: 0; border: 0; right: 0;}
-@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}
-@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
+.github-corner:hover .octo-arm { animation:octocat-wave 560ms ease-in-out; }
+.github-corner svg {fill:#fff; position: absolute; top: 0; border: 0; right: 0; }
+@keyframes octocat-wave {
+	0%,
+	100% { transform: rotate(0); }
+	20%,
+	60% { transform: rotate(-25deg); }
+	40%,
+	80% { transform: rotate(10deg); }
+}
+@media ( max-width: 500px ) {
+	.github-corner:hover .octo-arm { animation: none; }
+	.github-corner .octo-arm { animation: octocat-wave 560ms ease-in-out; }
+}
