--- a/assets/css/browning.css
+++ b/assets/css/browning.css
@@ -59,10 +59,10 @@ a { color: inherit; text-decoration: none; }
 
 .display-none { display: none; }
 .display-block { display: block; }
-.display-inline { display: inline-block; }
-code.display-inline,
-input.display-inline,
-textarea.display-inline {
+.display-inline-block { display: inline-block; }
+code.display-inline-block,
+input.display-inline-block,
+textarea.display-inline-block {
 	line-height: 1.4;
 	padding: .35rem .5rem;
 }
